# I.MX6ULL-pose-minitor

./: readme.md
driver/: icm20608.c  icm20608.ko  icm20608App  icm20608App.c
pose_monitor/: CMakeLists.txt  arm-linux.cmake  lv_conf.h  pose_dashboard.c  sensor_thread.c  sensor_thread.h  styles.c  styles.h  ui_dashboard.c  ui_dashboard.h
